VQ-3161/Service request selective rendering and multilingual

--- a/src/app/features/lms/grp/components/dashboard/components/common/service-request/new-service-request/new-service-request.component.css
+++ b/src/app/features/lms/grp/components/dashboard/components/common/service-request/new-service-request/new-service-request.component.css
@@ -82,6 +82,10 @@ button.submit-req:hover {
   color: red;
 }
 
+.row-space {
+  margin-bottom: 40px;
+}
+
 @media (max-width: 1000px) {
   .fixed-width-label {
     margin-bottom: 10px;
