--- a/src/app/features/lms/grp/components/dashboard/components/common/service-request/service-request-details/service-request-details.component.html
+++ b/src/app/features/lms/grp/components/dashboard/components/common/service-request/service-request-details/service-request-details.component.html
@@ -4,27 +4,27 @@
     </app-dynamic-breadcrumb>
   </div>
   <div class="container">
-    <div><span class="title">{{ 'Service request summary' }}</span></div>
+    <div><span class="title">{{ "lms.grp.service_request.service_request_summary" | translate }}</span></div>
     <div class="row col-12" style="color: black;">
       <div class="col-md-4 col-xs-12 col-sm-12">
         <table style="width: 100%;">
           <tr>
             <td style="width: 50%; align-items: left; color: grey;">{{
-              "lms.grp.service_request.admin.logs.request_number" | translate }}: </td>
+              "lms.grp.service_request.request_number" | translate }}: </td>
             <td style="width: 50%; align-items: right;">{{ reqLogs }}</td>
           </tr>
           <tr>
             <td style="width: 50%; align-items: left; color: grey;">{{
-              "lms.grp.service_request.admin.logs.request_status" | translate }}: </td>
+              "lms.grp.service_request.request_status" | translate }}: </td>
             <td style="width: 50%; align-items: right;">{{ reqLogs }}</td>
           </tr>
           <tr>
-            <td style="width: 50%; align-items: left; color: grey;">{{ "lms.grp.service_request.admin.logs.request_date"
+            <td style="width: 50%; align-items: left; color: grey;">{{ "lms.grp.service_request.request_date"
               | translate }}: </td>
             <td style="width: 50%; align-items: right;">{{ reqLogs }}</td>
           </tr>
           <tr>
-            <td style="width: 50%; align-items: left; color: grey;">{{ 'Description'}}: </td>
+            <td style="width: 50%; align-items: left; color: grey;">{{  "lms.grp.service_request.description" | translate }}: </td>
             <td style="width: 50%; align-items: right;">{{ reqLogs }}</td>
           </tr>
         </table>
@@ -32,18 +32,18 @@
       <div class="col-md-4 col-xs-12 col-sm-12">
         <table style="width: 100%;">
           <tr>
-            <td style="width: 50%; align-items: left; color: grey;">{{ "lms.grp.service_request.admin.logs.policy" |
+            <td style="width: 50%; align-items: left; color: grey;">{{ "lms.grp.service_request.policy" |
               translate }}: </td>
             <td style="width: 50%; align-items: right;">{{ reqLogs }}</td>
           </tr>
           <tr>
             <td style="width: 50%; align-items: left; color: grey;">{{
-              "lms.grp.service_request.admin.logs.category_type" | translate }}: </td>
+              "lms.grp.service_request.category_type" | translate }}: </td>
             <td style="width: 50%; align-items: right;">{{ reqLogs }}</td>
           </tr>
           <tr>
             <td style="width: 50%; align-items: left; color: grey;">{{
-              "lms.grp.service_request.admin.logs.policy_member" | translate }}: </td>
+              "lms.grp.service_request.policy_member" | translate }}: </td>
             <td style="width: 50%; align-items: right;">{{ reqLogs }}</td>
           </tr>
         </table>
@@ -51,17 +51,17 @@
       <div class="col-md-4 col-xs-12 col-sm-12">
         <table style="width: 100%;">
           <tr>
-            <td style="width: 50%; align-items: left; color: grey;">{{ "lms.grp.service_request.admin.logs.category" |
+            <td style="width: 50%; align-items: left; color: grey;">{{ "lms.grp.service_request.category" |
               translate }}: </td>
             <td style="width: 50%; align-items: right;">{{ reqLogs }}</td>
           </tr>
           <tr>
             <td style="width: 50%; align-items: left; color: grey;">{{
-              "lms.grp.service_request.admin.logs.policy_number" | translate }}: </td>
+              "lms.grp.service_request.policy_number" | translate }}: </td>
             <td style="width: 50%; align-items: right;">{{ reqLogs }}</td>
           </tr>
           <tr>
-            <td style="width: 50%; align-items: left; color: grey;">{{ "lms.grp.service_request.admin.logs.days_lapsed"
+            <td style="width: 50%; align-items: left; color: grey;">{{ "lms.grp.service_request.days_lapsed"
               | translate }}: </td>
             <td style="width: 50%; align-items: right;">{{ reqLogs }}</td>
           </tr>
@@ -69,9 +69,9 @@
       </div>
     </div>
 
-    <div style="margin-top: 40px;">{{ "lms.grp.service_request.admin.logs.notifications" | translate }}</div>
+    <div style="margin-top: 40px;">{{ "lms.grp.service_request.notifications" | translate }}</div>
     <div class="button-container">
-      <button class="new-msg" (click)="showNewMessageModal()">{{ "lms.grp.service_request.admin.logs.new_message" |
+      <button class="new-msg" (click)="showNewMessageModal()">{{ "lms.grp.service_request.new_message" |
         translate }}</button>
     </div>
     <div class="notifications">
@@ -90,7 +90,7 @@
   <div class="modal-dialog modal-dialog-centered modal-m">
     <div class="modal-content">
       <div class="modal-header">
-        <h6 class="modal-title" id="newMessageModal">{{ "lms.grp.service_request.admin.logs.new_message" | translate }}
+        <h6 class="modal-title" id="newMessageModal">{{ "lms.grp.service_request.new_message" | translate }}
         </h6>
         <button type="button" class="custom-red-button ms-auto" data-bs-dismiss="modal" aria-label="Close"
           (click)="closeNewMessageModal()"></button>
@@ -111,7 +111,7 @@
         <div class="attach-file-container">
           <div class="attach-button">
             <button class="plain-button" (click)="fileInput.click()">
-              <i class="pi pi-paperclip vertical-paperclip"></i> {{ "lms.grp.service_request.admin.logs.attach_file" |
+              <i class="pi pi-paperclip vertical-paperclip"></i> {{ "lms.grp.service_request.attach_file" |
               translate }}
             </button>
             <input type="file" #fileInput (change)="onFileSelected($event)" accept=".pdf" style="display: none;">
@@ -126,7 +126,7 @@
         </div>
 
         <button type="button" class="btn btn-primary" data-bs-dismiss="modal">{{
-          "lms.grp.service_request.admin.logs.submit" | translate }}</button>
+          "lms.grp.service_request.submit" | translate }}</button>
       </div>
     </div>
   </div>
