VQ-2418 Surrender Claims Initiation Screen

--- a/src/app/features/lms/ind/components/claims/components/claims-initiation/claims-initiation.component.html
+++ b/src/app/features/lms/ind/components/claims/components/claims-initiation/claims-initiation.component.html
@@ -26,8 +26,10 @@
         <app-surrender-claims
           [claimInitForm]="claimInitForm"
           [claimClients]="claimClients$"
-          [causationTypes]="causationTypes$"
-          [causationCauses]="causationCauses$">
+          [selectedPolicy]="selectedPolicy"
+          [eachStep]="eachStep"
+          (valueChanged)="onStepChange($event)"
+        >
         </app-surrender-claims>
       </ng-container>
 
