--- a/src/app/features/crm/components/base-crm/base-crm.component.html
+++ b/src/app/features/crm/components/base-crm/base-crm.component.html
@@ -33,9 +33,26 @@
           <div class="card fixed-height-card">
             <div class="card-header bg-transparent">Service Desk</div>
             <div class="card-body">
-              <ul class="custom-list slist">
-                <li>Service Request</li>
-              </ul>
+              <div class="custom-list list">
+                <div *ngFor="let item of serviceDeskItems" (click)="toggleItem(item)" [class.active]="item.showSubItems">
+                  <a [routerLink]="item.link" *ngIf="item.link">
+                    <i *ngIf="item.showSubItems" class="fa fa-chevron-down"></i>
+                    <i *ngIf="!item.showSubItems" class="fa fa-chevron-right"></i>
+                    {{ item.label }}
+                  </a>
+                  <span *ngIf="!item.link">
+                    <i *ngIf="item.showSubItems" class="fa fa-chevron-down"></i>
+                    <i *ngIf="!item.showSubItems" class="fa fa-chevron-right"></i>
+                    {{ item.label }}
+                  </span>
+                  <ul *ngIf="item.showSubItems" class="custom-list slist">
+                    <li *ngFor="let subItem of item.subItems">
+                      <a [routerLink]="subItem.link" *ngIf="subItem.link">{{ subItem.label }}</a>
+                      <span *ngIf="!subItem.link">{{ subItem.label }}</span>
+                    </li>
+                  </ul>
+                </div>
+              </div>
             </div>
           </div>
         </div>
